--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "jmathai/php-multi-curl": "dev-master",
-        "paquettg/php-html-parser": "^3.1"
+        "paquettg/php-html-parser": "^3.1",
+        "jmathai/php-multi-curl": "dev-master"
     }
 }
