--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "paquettg/php-html-parser": "^3.1",
-        "jmathai/php-multi-curl": "dev-master"
+        "jmathai/php-multi-curl": "dev-master",
+        "php": "7.3.26"
     }
 }
