--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "require": {
         "paquettg/php-html-parser": "^3.1",
         "jmathai/php-multi-curl": "dev-master",
-        "php": "7.3.26"
+        "php": "^7.2.0"
     }
 }
