--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
         "paquettg/php-html-parser": "^3.1",
-        "jmathai/php-multi-curl": "dev-master",
-        "php": "^7.4.0"
+        "jmathai/php-multi-curl": "dev-master"
     }
 }
