--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "paquettg/php-html-parser": "^3.1",
-        "jmathai/php-multi-curl": "dev-master"
+        "paquettg/php-html-parser": "^3.1"
     }
 }
